# microservices-scaffold

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  app.py  config-docker.yml  config.yml  manage.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements-tests.txt  requirements.txt  service.yaml  setup.cfg  setup.py  tests.sh  tox.ini
.github/workflows/: python-package.yml
docs/: Makefile  codeexample.rst  conf.py  configuration.rst  index.rst  installation.rst  make.bat  project.rst  quickstart.rst  runinkubernetes.rst  structure.rst
project/: __init__.py  app.py  config.py  db.sqlite3
project/models/: __init__.py  models.py
project/serializers/: serializers.py
project/swagger/: swagger.yaml
project/tests/: test_views.py
project/views/: __init__.py  actors.py  films.py  healthcheck.py  views.py
pyms/healthcheck/: __init__.py  healthcheck.py
pyms/logger/: __init__.py  logger.py
pyms/tracer/: main.py
tests/: config-tests.yml  conftest.py  test_views.py
